fix button spacing in ModalDialog

--- a/css/tm360-universal.css
+++ b/css/tm360-universal.css
@@ -172,7 +172,8 @@
     display: block;
 }
 
-.tm360 .btn {
+.tm360 .btn,
+.tm360 .modal .btn{
     font-family: 'MuseoSans700';
     font-size: 12px;
     color: #4F5158;
@@ -198,6 +199,10 @@
     -webkit-box-shadow: none;
        -moz-box-shadow: none;
             box-shadow: none;
+}
+
+.tm360 .modal .btn{
+    margin-left: 8px;
 }
 
 .tm360 .btn:hover {
@@ -359,10 +364,9 @@
     background-image: linear-gradient(top, #ebebee, #ebebee);
 }
 
-
-
 .tm360 .modal{
     /*border: 10px solid rgb(153, 153, 153);*/
+    width: 636px;
     border: 10px solid rgba(0, 0, 0, 0.25);
     -webkit-background-clip: padding-box;
     -moz-background-clip: padding-box;
@@ -370,10 +374,14 @@
     -webkit-border-radius: 0px;
        -moz-border-radius: 0px;
             border-radius: 0px;
+
+    -webkit-box-shadow: none;
+       -moz-box-shadow: none;  
+            box-shadow: none;
 }
 
-.tm360 .modal.large{
-    width: 636px;
+.tm360 .small-screen .modal{
+    width: 482px;
 }
 
 .tm360 .modal.custom{
@@ -389,7 +397,7 @@
 }
 
 .tm360 .modal-header{
-    padding: 16px 19px 0px 19px;
+    padding: 16px 20px 3px 20px;
     border: none;
 }
 
@@ -399,13 +407,17 @@
 }
 
 .tm360 .modal-body{
-    padding: 10px 19px 5px 19px;
+    padding: 10px 20px 6px 20px;
     border: none;
     font-family: Arial;
     font-size: 14px;
     color: #4F5158;
 }
 
+.modal-footer{
+    padding: 20px 21px 21px 20px;
+    background-color: #f5f5f7;
+}
 
 .tm360 .modal-backdrop.fade.in{
     background-color: #000;
@@ -417,8 +429,4 @@
     background-color: #000;
     opacity: 0.0;
     filter: alpha(opacity=0);
-}
-
-.tm360 .modal .btn{
-    min-width: 56px;
 }
